--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <li class="text-list">
                         <div class="about-icon-design">
                             <svg class="about-icon" width="64px" height="64px">
-                                <use href="./images/about/about-image.svg#icon-antenna"></use>
+                                <use href="./images/svg-photo/imeges-vector.svg#icon-antenna"></use>
                             </svg>
                         </div>
                         <h3 class="about-headline-item">Strategy</h3>
@@ -88,7 +88,7 @@
                     <li class="text-list">
                         <div class="about-icon-design">
                             <svg class="about-icon" width="64px" height="64px">
-                                <use href="./images/about/about-image.svg#icon-clock"></use>
+                                <use href="./images/svg-photo/imeges-vector.svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="about-headline-item">Punctuality</h3>
@@ -103,7 +103,7 @@
                     <li class="text-list">
                         <div class="about-icon-design">
                             <svg class="about-icon" width="64px" height="64px">
-                                <use href="./images/about/about-image.svg#icon-diagram"></use>
+                                <use href="./images/svg-photo/imeges-vector.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="about-headline-item">Diligence</h3>
@@ -116,7 +116,7 @@
                     <li class="text-list">
                         <div class="about-icon-design">
                             <svg class="about-icon" width="64px" height="64px">
-                                <use href="./images/about/about-image.svg#icon-astronaut"></use>
+                                <use href="./images/svg-photo/imeges-vector.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="about-headline-item">Technologies</h3>
@@ -162,28 +162,28 @@
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-facebook"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-instagram"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-linkedin"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-twitter"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -199,28 +199,28 @@
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-facebook"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-instagram"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-linkedin"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-twitter"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -236,28 +236,28 @@
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-facebook"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-instagram"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-linkedin"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-twitter"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -273,28 +273,28 @@
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-facebook"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-instagram"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-linkedin"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-soc-item">
                                     <a href="" class="team-soc-link link">
                                         <svg class="team-soc-icon" width="16px" height="16px">
-                                            <use href="./images/soc-photo/icons-soc.svg#icon-twitter"></use>
+                                            <use href="./images/svg-photo/imeges-vector.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -313,43 +313,42 @@
                         <div class="customers-hov-foc">
                             <a href="" class="customers-link link">
                                 <svg class="customers-icon" width="104px" height="56px">
-                                    <use href="./images/Customers/customers-icon.svg#icon-yaco"></use>
+                                    <use href="./images/svg-photo/customers-icon.svg#icon-yaco"></use>
                                 </svg>
-
                             </a>
                         </div>
                     </li>
                     <li class="customers-item">
                         <a href="" class="customers-link link">
                             <svg class="customers-icon" width="104px" height="56px">
-                                <use href="./images/Customers/customers-icon.svg#icon-taglinehere"></use>
+                                <use href="./images/svg-photo/customers-icon.svg#icon-taglinehere"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a href="" class="customers-link link">
                             <svg class="customers-icon" width="104px" height="56px">
-                                <use href="./images/Customers/customers-icon.svg#icon-company"></use>
+                                <use href="./images/svg-photo/customers-icon.svg#icon-company"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a href="" class="customers-link link">
                             <svg class="customers-icon" width="104px" height="56px">
-                                <use href="./images/Customers/customers-icon.svg#icon-foster"></use>
+                                <use href="./images/svg-photo/customers-icon.svg#icon-foster"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a href="" class="customers-link link">
                             <svg class="customers-icon" width="104px" height="56px">
-                                <use href="./images/Customers/customers-icon.svg#icon-brand"></use>
+                                <use href="./images/svg-photo/customers-icon.svg#icon-brand"></use>
                             </svg>
                         </a </li>
                     <li class="customers-item">
                         <a href="" class="customers-link link">
                             <svg class="customers-icon" width="104px" height="56px">
-                                <use href="./images/Customers/customers-icon.svg#icon-tagline"></use>
+                                <use href="./images/svg-photo/customers-icon.svg#icon-tagline"></use>
                             </svg>
                         </a>
                     </li>
@@ -357,7 +356,7 @@
                 <div>
         </section>
     </main>
-    <!-- Footer -->
+    <!----------------------------------------------------------- Footer ------------------------------------------->
     <footer class="footer-copyrigth">
         <div class="container footer-container">
             <div class="footer-logo">
@@ -376,28 +375,28 @@
                     <li class="footer-soc-item">
                         <a href="" class="footer-soc-link link">
                             <svg class="footer-soc-icon" width="24px" height="24px">
-                                <use href="./images/footer/footer-soc.svg#icon-instagram"></use>
+                                <use href="./images/svg-photo/imeges-vector.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-soc-item">
                         <a href="" class="footer-soc-link link">
                             <svg class="footer-soc-icon" width="24px" height="24px">
-                                <use href="./images/footer/footer-soc.svg#icon-twitter"></use>
+                                <use href="./images/svg-photo/imeges-vector.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-soc-item">
                         <a href="" class="footer-soc-link link">
                             <svg class="footer-soc-icon" width="24px" height="24px">
-                                <use href="./images/footer/footer-soc.svg#icon-facebook"></use>
+                                <use href="./images/svg-photo/imeges-vector.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-soc-item">
                         <a href="" class="footer-soc-link link">
                             <svg class="footer-soc-icon" width="24px" height="24px">
-                                <use href="./images/footer/footer-soc.svg#icon-linkedin"></use>
+                                <use href="./images/svg-photo/imeges-vector.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
