--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
-
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -30,7 +30,7 @@
                 <!-- header and links -->
                 <ul class="header-list  list">
                     <li class="header-item">
-                        <a class="nav-link link" href="./index.html">Studio</a>
+                        <a class="nav-link link current" href="./index.html">Studio</a>
                     </li>
                     <li class="header-item">
                         <a class="nav-link link" href="./portfolio.html">Portfolio</a>
@@ -404,6 +404,10 @@
             </div>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
