--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -31,7 +32,7 @@
                         <a class="nav-link link" href="./index.html">Studio</a>
                     </li>
                     <li class="header-item">
-                        <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+                        <a class="nav-link link current" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li class="header-item">
                         <a class="nav-link link" href="">Contacts</a>
@@ -229,6 +230,10 @@
             </div>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
