--- a/portfolio.html
+++ b/portfolio.html
@@ -80,8 +80,16 @@
                 <ul class="list portfolio-list">
                     <li class="portfolio-item">
                         <div class="box-shadow">
-                            <a href="" class="portfolio-link link"><img class="portflio-img"
-                                    src="./images/portfolio/img-1portfolio.jpg" alt="Banking App">
+                            <a href="" class="portfolio-link link">
+                                <div class="portfolio-cover-wrap">
+                                    <img class="portflio-img" src="./images/portfolio/img-1portfolio.jpg"
+                                        alt="Banking App">
+                                    <p class="portfolio-cover-text">
+                                        14 Stylish and User-Friendly App Design Concepts · Task
+                                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
                                 <div class="portfolio-wrap">
                                     <h2 class="portfolio-subject">Banking App Interface Concept</h2>
                                     <p class="text-item link">App</p>
@@ -91,8 +99,16 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="box-shadow">
-                            <a href="" class="portfolio-link link"><img class="portflio-img"
-                                    src="./images/portfolio/img-2portfolio.jpg" alt="Cashless Payment">
+                            <a href="" class="portfolio-link link">
+                                <div class="portfolio-cover-wrap">
+                                    <img class="portflio-img" src="./images/portfolio/img-2portfolio.jpg"
+                                        alt="Banking App">
+                                    <p class="portfolio-cover-text">
+                                        14 Stylish and User-Friendly App Design Concepts · Task
+                                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
                                 <div class="portfolio-wrap">
                                     <h2 class="portfolio-subject">Cashless Payment</h2>
                                     <p class="text-item link">Marketing</p>
@@ -102,8 +118,16 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="box-shadow">
-                            <a href="" class="portfolio-link link"><img class="portflio-img"
-                                    src="./images/portfolio/img-3portfolio.jpg" alt="Meditaion App">
+                            <a href="" class="portfolio-link link">
+                                <div class="portfolio-cover-wrap">
+                                    <img class="portflio-img" src="./images/portfolio/img-3portfolio.jpg"
+                                        alt="Banking App">
+                                    <p class="portfolio-cover-text">
+                                        14 Stylish and User-Friendly App Design Concepts · Task
+                                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
                                 <div class="portfolio-wrap">
                                     <h2 class="portfolio-subject">Meditation App</h2>
                                     <p class="text-item link">App</p>
@@ -113,8 +137,16 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="box-shadow">
-                            <a href="" class="portfolio-link link"><img class="portflio-img"
-                                    src="./images/portfolio/img-4portfolio.jpg" alt="Taxi Service">
+                            <a href="" class="portfolio-link link">
+                                <div class="portfolio-cover-wrap">
+                                    <img class="portflio-img" src="./images/portfolio/img-4portfolio.jpg"
+                                        alt="Banking App">
+                                    <p class="portfolio-cover-text">
+                                        14 Stylish and User-Friendly App Design Concepts · Task
+                                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
                                 <div class="portfolio-wrap">
                                     <h2 class="portfolio-subject">Taxi Service</h2>
                                     <p class="text-item link">Marketing</p>
@@ -124,8 +156,16 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="box-shadow">
-                            <a href="" class="portfolio-link link"><img class="portflio-img"
-                                    src="./images/portfolio/img-5portfolio.jpg" alt="Screen Illustrations">
+                            <a href="" class="portfolio-link link">
+                                <div class="portfolio-cover-wrap">
+                                    <img class="portflio-img" src="./images/portfolio/img-5portfolio.jpg"
+                                        alt="Banking App">
+                                    <p class="portfolio-cover-text">
+                                        14 Stylish and User-Friendly App Design Concepts · Task
+                                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
                                 <div class="portfolio-wrap">
                                     <h2 class="portfolio-subject">Screen Illustrations</h2>
                                     <p class="text-item link">Design</p>
@@ -135,8 +175,16 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="box-shadow">
-                            <a href="" class="portfolio-link link"><img class="portflio-img"
-                                    src="./images/portfolio/img-6portfolio.jpg" alt="Online Courses">
+                            <a href="" class="portfolio-link link">
+                                <div class="portfolio-cover-wrap">
+                                    <img class="portflio-img" src="./images/portfolio/img-6portfolio.jpg"
+                                        alt="Banking App">
+                                    <p class="portfolio-cover-text">
+                                        14 Stylish and User-Friendly App Design Concepts · Task
+                                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
                                 <div class="portfolio-wrap">
                                     <h2 class="portfolio-subject">Online Courses</h2>
                                     <p class="text-item link">Marketing</p>
@@ -146,8 +194,16 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="box-shadow">
-                            <a href="" class="portfolio-link link"><img class="portflio-img"
-                                    src="./images/portfolio/img-7portfolio.jpg" alt="Instagram Stories Concept">
+                            <a href="" class="portfolio-link link">
+                                <div class="portfolio-cover-wrap">
+                                    <img class="portflio-img" src="./images/portfolio/img-7portfolio.jpg"
+                                        alt="Banking App">
+                                    <p class="portfolio-cover-text">
+                                        14 Stylish and User-Friendly App Design Concepts · Task
+                                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
                                 <div class="portfolio-wrap">
                                     <h2 class="portfolio-subject">Instagram Stories Concept</h2>
                                     <p class="text-item link">Design</p>
@@ -157,8 +213,16 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="box-shadow">
-                            <a href="" class="portfolio-link link"><img class="portflio-img"
-                                    src="./images/portfolio/img-8portfolio.jpg" alt="Organic Food">
+                            <a href="" class="portfolio-link link">
+                                <div class="portfolio-cover-wrap">
+                                    <img class="portflio-img" src="./images/portfolio/img-8portfolio.jpg"
+                                        alt="Banking App">
+                                    <p class="portfolio-cover-text">
+                                        14 Stylish and User-Friendly App Design Concepts · Task
+                                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
                                 <div class="portfolio-wrap">
                                     <h2 class="portfolio-subject">Organic Food</h2>
                                     <p class="text-item link">Web Site</p>
@@ -168,8 +232,16 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="box-shadow">
-                            <a href="" class="portfolio-link link"><img class="portflio-img"
-                                    src="./images/portfolio/img-9portfolio.jpg" alt="Fresh Coffee">
+                            <a href="" class="portfolio-link link">
+                                <div class="portfolio-cover-wrap">
+                                    <img class="portflio-img" src="./images/portfolio/img-9portfolio.jpg"
+                                        alt="Banking App">
+                                    <p class="portfolio-cover-text">
+                                        14 Stylish and User-Friendly App Design Concepts · Task
+                                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App
+                                    </p>
+                                </div>
                                 <div class="portfolio-wrap">
                                     <h2 class="portfolio-subject">Fresh Coffee</h2>
                                     <p class="text-item link">Web Site</p>
@@ -201,28 +273,28 @@
                     <li class="footer-soc-item">
                         <a href="" class="footer-soc-link link">
                             <svg class="footer-soc-icon" width="24px" height="24px">
-                                <use href="./images/footer/footer-soc.svg#icon-instagram"></use>
+                                <use href="./images/svg-photo/imeges-vector.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-soc-item">
                         <a href="" class="footer-soc-link link">
                             <svg class="footer-soc-icon" width="24px" height="24px">
-                                <use href="./images/footer/footer-soc.svg#icon-twitter"></use>
+                                <use href="./images/svg-photo/imeges-vector.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-soc-item">
                         <a href="" class="footer-soc-link link">
                             <svg class="footer-soc-icon" width="24px" height="24px">
-                                <use href="./images/footer/footer-soc.svg#icon-facebook"></use>
+                                <use href="./images/svg-photo/imeges-vector.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-soc-item">
                         <a href="" class="footer-soc-link link">
                             <svg class="footer-soc-icon" width="24px" height="24px">
-                                <use href="./images/footer/footer-soc.svg#icon-linkedin"></use>
+                                <use href="./images/svg-photo/imeges-vector.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
