доробив трансішен та модалку

--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop">
-        <div class="modal is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
             <button type="button" data-modal-close class="modal-close-btn">
                 <svg width="8" height="8">
                     <use href="./images/svg-photo/modal.svg#icon-close-black-modal"></use>
